# libvirt-mcp

./: .gitignore  CLAUDE.md  Dockerfile  README.md  config.example.toml  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
libvirt_mcp/: connections.py  server.py  states.py
libvirt_mcp/tools/: lifecycle.py  management.py  readonly.py  snapshot.py
