[project]
name = "libvirt-mcp"
version = "0.1.0"
description = "MCP server to manage KVM/QEMU domains on remote libvirt hosts via SSH-tunneled libvirt RPC"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
dependencies = [
    "mcp[cli]>=1.6.0",
    "libvirt-python>=10.0.0",
]

[project.scripts]
libvirt-mcp = "libvirt_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["libvirt_mcp"]
